<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/noteOrBookRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/bookRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_string" />

        <RadioButton
            android:id="@+id/noteRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_string"
            android:checked="true"/>
    </RadioGroup>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/title_string"
        android:textColor="@color/contentTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteOrBookRadioGroup" />

    <AutoCompleteTextView
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/titleTextColor"
        app:layout_constraintStart_toStartOf="@+id/titleTV"
        app:layout_constraintTop_toBottomOf="@+id/titleTV" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/done_string"
        app:layout_constraintEnd_toEndOf="@+id/titleInput"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />


</androidx.constraintlayout.widget.ConstraintLayout>